# StudentPlacement_PredictionModel

./: README.md  main.py  pyproject.toml
data/raw/: .gitignore  student_placement_prediction_dataset_2026.csv.dvc
deployment/: streamlit.py
experiment/: research.ipynb
experiment/artifacts/: best_model.pkl
